Add refresh functionality

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="icon" type="image/x-icon" href="./favicon.ico">
         
         <!-- Fonts -->
+        <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Krona+One|Ubuntu" rel="stylesheet">
         
         <!-- Styles -->
@@ -29,68 +30,71 @@
 		
 		<main>
 			<div class="crypto-card" id="btc">
-				<h2>Bitcoin</h2>
+				<h2>Bitcoin<a class="refresh"><i class="fa fa-sync"></i> Refresh</a></h2>
 				<h3>USD: <span class="usd"></span></h3>
 				<h3>EUR: <span class="eur"></span></h3>
 				<div class="clearfix"></div>
 			</div>
 			
 			<div class="crypto-card" id="eth">
-				<h2>Ethereum</h2>
+				<h2>Ethereum<a class="refresh"><i class="fa fa-sync"></i> Refresh</a></h2>
 				<h3>USD: <span class="usd"></span></h3>
 				<h3>EUR: <span class="eur"></span></h3>
 				<div class="clearfix"></div>
 			</div>
 			
 			<div class="crypto-card" id="xrp">
-				<h2>Ripple</h2>
+				<h2>Ripple<a class="refresh"><i class="fa fa-sync"></i> Refresh</a></h2>
 				<h3>USD: <span class="usd"></span></h3>
 				<h3>EUR: <span class="eur"></span></h3>
 				<div class="clearfix"></div>
 			</div>
 			
 			<div class="crypto-card" id="ltc">
-				<h2>Litecoin</h2>
+				<h2>Litecoin<a class="refresh"><i class="fa fa-sync"></i> Refresh</a></h2>
 				<h3>USD: <span class="usd"></span></h3>
 				<h3>EUR: <span class="eur"></span></h3>
 				<div class="clearfix"></div>
 			</div>
 			
 			<div class="crypto-card" id="xmr">
-				<h2>Monero</h2>
+				<h2>Monero<a class="refresh"><i class="fa fa-sync"></i> Refresh</a></h2>
 				<h3>USD: <span class="usd"></span></h3>
 				<h3>EUR: <span class="eur"></span></h3>
 				<div class="clearfix"></div>
 			</div>
 			
 			<div class="crypto-card" id="lsk">
-				<h2>Lisk</h2>
+				<h2>Lisk<a class="refresh"><i class="fa fa-sync"></i> Refresh</a></h2>
 				<h3>USD: <span class="usd"></span></h3>
 				<h3>EUR: <span class="eur"></span></h3>
 				<div class="clearfix"></div>
 			</div>
 			
 			<div class="crypto-card" id="dash">
-				<h2>Dash</h2>
+				<h2>Dash<a class="refresh"><i class="fa fa-sync"></i> Refresh</a></h2>
 				<h3>USD: <span class="usd"></span></h3>
 				<h3>EUR: <span class="eur"></span></h3>
 				<div class="clearfix"></div>
 			</div>
 			
 			<div class="crypto-card" id="xem">
-				<h2>NEM</h2>
+				<h2>NEM<a class="refresh"><i class="fa fa-sync"></i> Refresh</a></h2>
 				<h3>USD: <span class="usd"></span></h3>
 				<h3>EUR: <span class="eur"></span></h3>
 				<div class="clearfix"></div>
 			</div>
 			
 			<div class="crypto-card" id="doge">
-				<h2>Dogecoin</h2>
+				<h2>Dogecoin<a class="refresh"><i class="fa fa-sync"></i> Refresh</a></h2>
 				<h3>USD: <span class="usd"></span></h3>
 				<h3>EUR: <span class="eur"></span></h3>
 				<div class="clearfix"></div>
 			</div>
+			
 		</main>
+		
+		<a class="refresh refresh-all"><i class="fa fa-sync"></i> Refresh All</a>
 		
 		<footer>
 			<p>API from <a href="https://min-api.cryptocompare.com/">CryptoCompare</a></p>
