Change github link to portfolio link.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         
-        <meta name="description" content="A super-simple, friendly and minimalist way of checking out real-time pricing on the most popular crypto-currency!">
+        <meta name="description" content="A super-simple, friendly and minimalistic way of checking out real-time pricing on the most popular crypto-currency!">
 
        <title>Cryptos</title>
        
@@ -99,7 +99,7 @@
 		<footer>
 			<p>API from <a href="https://min-api.cryptocompare.com/">CryptoCompare</a></p>
 			<p>Copyright &copy; 2018 | Website by Cristi Cismas</p>
-			<p><a href="https://github.com/cristicismas" target="_blank">My Github</a></p>
+			<p><a href="https://cristicismas.github.io" target="_blank">My Portfolio</a></p>
 		</footer>
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
